--- a/GamePageObj.page
+++ b/GamePageObj.page
@@ -1,5 +1,5 @@
 <apex:page controller="GameCallObj" >
-  <apex:form >
+   <apex:form >
      <apex:pageBlock >
      <apex:outputLabel >Choose warrior1:</apex:outputLabel>
      <apex:selectList value="{!selectedWar1}" size="1" >
@@ -15,7 +15,7 @@
      </apex:pageBlock>
     
      <apex:pageBlock >
-     <apex:panelGrid columns="1" rules="all" frame="box" >
+     <apex:panelGrid columns="1" rules="all" frame="box">
        <apex:panelGrid columns="3" id="out" cellPadding="4" border="1"> 
        <apex:outputtext value="" />
        <apex:outputtext value="Warrior 1 :" />
@@ -52,6 +52,18 @@
     <apex:pageBlock id="RefreshField">
        Победитель :<apex:inputtext value="{!Winner}"/>
     </apex:pageBlock>
+    <apex:pageBlock>
+      <apex:inputText value="{!searchstring}" label="Input"/>   
+      <apex:commandButton value="Search records" action="{!search}"/>  
+      <apex:commandButton value="Clear records" action="{!clear}"/>  
+      <apex:pageBlock title="Search Result">  
+      <apex:pageblockTable value="{!units}" var="un">  
+      <apex:column >  
+       <apex:outputlink value="https://ap1.salesforce.com/{!un.id}">{!un.Name}</apex:outputlink>  
+      </apex:column>  
+      <apex:column value="{!un.id}"/>  
+     </apex:pageBlockTable>     
+    </apex:pageBlock>   
+    </apex:pageBlock>
  </apex:form>
 </apex:page>
-                             
