--- a/JobPage.page
+++ b/JobPage.page
@@ -1,4 +1,4 @@
-<apex:page controller="SimpleController">
+<apex:page controller="CompanyController">
   <apex:form >
     <apex:pageBlock >
      <apex:panelGrid columns="1" rules="all" frame="box" >
