--- a/JobPageObj.page
+++ b/JobPageObj.page
@@ -1,4 +1,4 @@
-<apex:page controller="SimpleControllerObj">
+<apex:page controller="JobControllerObj">
    <apex:pageBlock title="Work period" >
        <apex:pageBlockTable value="{!wps}" var="wpItem" >
          <apex:column value="{!wpItem.Name}"/>
