--- a/CreateWarNew.page
+++ b/CreateWarNew.page
@@ -1,4 +1,4 @@
-<apex:page controller="GameCallObj" >
+<apex:page controller="GameCallObjPeople" >
   <apex:form >
     <apex:pageBlock title="Create New Warrior!">
       <apex:pageBlockSection title="Create New Warrior!">
